# FAM-Graph

include/: client_runtime.hpp  configs.hpp  connection_utils.hpp
src/: CMakeLists.txt  bfs.hpp  bitmap.hpp  client_runtime.cpp  connected_components.hpp  connection_utils.cpp  edgemap.hpp  graph_kernel.hpp  kcore.hpp  main.cpp  mis.hpp  mmap_util.hpp  pagerank_delta.hpp  server_runtime.cpp  stats.hpp
util/: CMakeLists.txt  main.cpp
